# bitcoin_rust

./: .gitignore
lib/: Cargo.toml
lib/src/: crypto.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml
miner/src/: main.rs
